argocd/media/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr
spec:
  ports:
  - name: requestrr
    port: 80
    targetPort: 4545
  selector:
    app: requestrr
