argocd/media/requestrr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: requestrr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - requestrr.homelab.bowmans.site
    secretName: requestrr-certificate
  rules:
    - host: requestrr.homelab.bowmans.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: requestrr
                port:
                  number: 80
