argocd/media/requestrr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-requestrr
        port: 4545
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: requestrr-certificate
